--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -43,6 +43,7 @@ body * {
   display: grid;
   grid-template-columns: repeat(4, minmax(250px, 1fr));
   grid-gap: 10px;
+  padding: 0;
 }
 
 .SearchResult img {
