--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -99,6 +99,21 @@ body * {
   width: 100%;
 }
 
+.loading {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+.loading span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 /* dark mode 처리 
 @media (prefers-color-scheme: dark) {
   body {
