랜덤버튼 ui 및 기능 추가

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -153,3 +153,11 @@ body * {
     grid-gap: 10px;
   }
 }
+
+/* 검색 input, button */
+.search_container {
+  display: flex;
+}
+.search_container button {
+  width: 100px;
+}
